<resources>
    <string name="app_name">SmallProject</string>
    <string name="hello_welcome">Hello, Welcome!</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="or_contiune_with">or contiune with</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="hello">Hello,</string>
    <string name="create_your_account">Create your account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>