<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_in">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/signImg"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textStyle="bold"
        android:layout_below="@+id/signImg"
        android:textSize="20sp"
        android:id="@+id/tv1"
        android:layout_marginLeft="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textStyle="bold"
        android:layout_below="@+id/tv1"
        android:textSize="20sp"
        android:id="@+id/tv2"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/edittext1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:hint="@string/username"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:drawablePadding="10dp"
        android:textColorHint="@android:color/black"
        android:minHeight="48dp"
        android:background="@drawable/background"
        />

    <EditText
        android:id="@+id/edittext2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext1"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:background="@drawable/background"
        android:padding="10dp"
        android:drawableLeft="@drawable/baseline_password_24"
        android:drawablePadding="10dp"
        android:textColorHint="@android:color/black"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:drawableRight="@drawable/baseline_remove_red_eye_24"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext2"
        android:layout_marginStart="30dp"
        android:text="@string/remember_me"
        android:id="@+id/checkbx"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext2"
        android:layout_marginStart="265dp"
        android:layout_marginTop="15dp"
        android:text="@string/forget_password"
        android:id="@+id/tv3"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv3"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:elevation="10dp"
        app:cardCornerRadius="15dp"
        android:id="@+id/card">

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingHorizontal="30dp"
        android:paddingVertical="16dp"
        android:background="@drawable/buttonbg"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="18sp"
        android:id="@+id/btn1"
        android:textColor="@android:color/white"
        />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/or_contiune_with"
        android:textSize="15sp"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/google"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/tv4"
        android:layout_marginLeft="60dp"
        android:id="@+id/img2"
        android:background="@drawable/buttonplain" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/facebook"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/tv4"
        android:layout_centerHorizontal="true"
        android:id="@+id/img3"
        android:background="@drawable/buttonplain" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/applelog"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/tv4"
        android:layout_marginStart="290dp"
        android:id="@+id/img4"
        android:background="@drawable/buttonplain" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img3"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        android:text="@string/dont_have_an_account"
        android:textSize="14sp"
        tools:ignore="TextSizeCheck"
        android:id="@+id/tv5"/>


    <TextView
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_below="@id/img3"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonplain"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:textAlignment="center"
        android:paddingVertical="11dp"
        android:id="@+id/btn2"
        />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>

